code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_table_7.wast
(assert_invalid
  (module (func $type-index-void-vs-i32
    (block (br_table 0 0 0 (nop)))
  ))
  "type mismatch"
)